welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:3: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
    case (i, j, k) if (((i%10 == j%10)  | ((j%10 == k%10) | ((k%10 == i%10) | ((i%10 == j%10) & (j%10 == k%10))) => return true
                                                          ^lastDigit:4: error: ')' expected but 'case' found.
    case (_, _, _) => return false
    ^