welcome.lessons.welcome.bat.bool2.LastDigit2.scala.code
def lastDigit(a:Int, b:Int, c:Int):Boolean = {
  (a, b, c) match {
    case (i, j, k) if (((i%10 == j%10)  | ((j%10 == k%10) | ((k%10 == i%10) | ((i%10 == j%10) & (j%10 == k%10))) => return true
    case (_, _, _) => return false
  }
}